--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/View/Admin/Listgrammarguidelinemanage.jsp=UTF-8
 encoding//src/DAO/LoginDAO.java=UTF-8
 encoding//src/DAO/RegisterDAO.java=UTF-8
